# Balltze

./: .gitignore  LICENSE  README.md  balltze.repos  setup_dokcer.sh
.devcontainer/: .dockerignore  Dockerfile  build.sh  compose.yaml  devcontainer.json  setup.sh
balltze/: CMakeLists.txt  balltze.repos  package.xml  simulation.repos
balltze_bringup/: CMakeLists.txt  package.xml
balltze_bringup/config/: champ.yaml  controllers.yaml  relay_joint_offsets.yaml
balltze_bringup/launch/: champ.launch.py  hardware.launch.py  sim.launch.py
balltze_champ/: Dockerfile  docker-compose.yaml  ros_entrypoint.sh
balltze_description/: CMakeLists.txt  README.md  package.xml
balltze_description/balltze_description/: CMakeLists.txt
balltze_description/balltze_description/config/: props.yaml
balltze_description/balltze_description/urdf/: balltze.urdf
balltze_description/config/: config.yaml  controllers.yaml  props.yaml
balltze_description/examples/: Dockerfile  ros_entrypoint.sh
balltze_description/examples/generate_urdf/: docker-compose.yaml
balltze_description/examples/rviz_nvidia_preview/: docker-compose.yaml
balltze_description/examples/rviz_preview/: docker-compose.yaml
balltze_description/examples/rviz_windows_preview/: docker-compose.yaml
balltze_description/launch/: model_preveiw.launch.py  rviz.launch.py
balltze_description/meshes/: rename.py
balltze_description/rviz/: model_preveiw.rviz
balltze_description/urdf/: balltze.urdf  balltze.urdf.xacro  balltze_macro.urdf.xacro  body.urdf.xacro  gazebo.ros2_control.xacro  hardware.ros2_control.xacro  leg.urdf.xacro
balltze_hardware/: CMakeLists.txt  balltze_hardware_plugins.xml  package.xml
balltze_hardware/config/: motor_params.yaml
balltze_hardware/include/balltze_hardware/: ax_12_a_motor.hpp  balltze_dynamixel_system.hpp  balltze_tip_gpio.hpp  dynamixel_motor_node.hpp  visibility_control.hpp
balltze_hardware/src/: ax_12_a_motor.cpp  balltze_dynamixel_system.cpp  dynamixel_motor_node.cpp
balltze_motors/: Dockerfile  ros_entrypoint.sh
balltze_motors/balltze_motors/: package.xml  setup.cfg  setup.py
balltze_motors/balltze_motors/balltze_motors/: motors_node.py
balltze_motors/balltze_motors/balltze_motors/dynamixel_ax_12a/: motor.py  protocol.py
balltze_motors/balltze_motors/scripts/: setup_motor.py
balltze_motors/balltze_motors/test/: test_protocol.py
balltze_motors/examples/PI_GPIO/: docker-compose.yaml
balltze_msgs/: CMakeLists.txt  package.xml
balltze_msgs/include/balltze_msgs/: message_relay.hpp
balltze_msgs/msg/: MotorStatus.msg  MotorStatusArr.msg  Target.msg  TargetArr.msg  TargetStatus.msg  TargetStatusArr.msg
balltze_msgs/src/: message_relay.cpp  message_relay_node.cpp
balltze_simulation/: CMakeLists.txt  package.xml
balltze_simulation/balltze_gazebo/: CMakeLists.txt  Dockerfile
balltze_simulation/balltze_gazebo/balltze_gazebo/: package.xml
balltze_simulation/balltze_gazebo/examples/gazebo_nvidia/: docker-compose.yaml
balltze_simulation/balltze_pybullet/: balltze.py
balltze_simulation/balltze_pybullet/balltze/balltze_description/: __init__.py  description.py  kinematics.py
balltze_simulation/include/balltze_simulation/: gz_tip.hpp  tip_sensor.hpp  visibility_control.hpp
balltze_simulation/launch/: sim.launch.py
balltze_simulation/src/: gz_tip.cpp  tip_sensor.cpp  tip_sensor_test.cpp
dynamixel_hardware_system/: CMakeLists.txt  dynamixel_hardware_plugins.xml  package.xml
dynamixel_hardware_system/include/dynamixel_hardware_system/: ax_12_a_motor.hpp  dynamixel_ax12a_system.hpp  visibility_control.hpp
dynamixel_hardware_system/src/: ax_12_a_motor.cpp  dynamixel_ax12a_system.cpp
