<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>balltze</name>
  <version>0.0.0</version>
  <description>Balltze Ignition-Gazebo simulation</description>
  <maintainer email="krzy.wojciecho@gmail.com">Krzysztof Wojciechowski</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/Kotochleb/Balltze</url>
  <url type="bugtracker">https://github.com/Kotochleb/Balltze/issues</url>
  <url type="repository">https://github.com/Kotochleb/Balltze/</url>

  <author>Krzysztof Wojciechowski</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>balltze_bringup</exec_depend>
  <exec_depend>balltze_description</exec_depend>
  <exec_depend>balltze_hardware</exec_depend>
  <exec_depend>balltze_msgs</exec_depend>
  <exec_depend condition="$BALLTZE_BUILD_TYPE == 'simulation'">balltze_simulation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
