<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>balltze_hardware</name>
  <version>0.0.0</version>
  <description>Dynamixel AX12-A ros2_controll hardware controllers</description>
  <maintainer email="krzy.wojciecho@gmail.com">Krzysztof Wojciechowski</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/Kotochleb/Balltze</url>
  <url type="bugtracker">https://github.com/Kotochleb/Balltze/issues</url>
  <url type="repository">https://github.com/Kotochleb/Balltze/</url>

  <author>Krzysztof Wojciechowski</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend> -->
  <depend>dynamixel_sdk</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros2_control plugin="${prefix}/balltze_hardware_plugins.xml"/>
  </export>
</package>
