<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>balltze_msgs</name>
  <version>1.0.0</version>
  <description>A messages used by Balltze robot.</description>
  <maintainer email="krzy.wojciecho@gmail.com">Krzysztof Wojciechowski</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/Kotochleb/Balltze</url>
  <url type="bugtracker">https://github.com/Kotochleb/Balltze/issues</url>
  <url type="repository">https://github.com/Kotochleb/Balltze/</url>

  <author>Krzysztof Wojciechowski</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>