<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>balltze_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo simulatuon of Balltze.</description>
  <maintainer email="krzy.wojciecho@gmail.com">Krzysztof Wojciechowski</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

</package>
